--- a/App/DrapeauApp/app/src/main/res/layout/activity_resultat.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_resultat.xml
@@ -1,81 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayoutActivityResultat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowsBackground">
+    android:background="@color/windowsBackground"
+    android:visibility="visible"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="25dp">
 
-    <Button
-        android:id="@+id/buttonRecommencer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+    <ListView
+        android:id="@+id/listViewActivityResultat"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/buttonRetourAuMenu"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="34dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewScoreActivityResultat"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="22dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewScoreActivityResultat"
+        android:layout_width="0dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="44dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="18dp"
-        android:background="#2D7396"
-        android:text="Recommencer"
-        android:textColor="@android:color/white" />
+        android:layout_marginTop="92dp"
+        android:background="@color/colorPrimary"
+        android:text="7/10"
+        android:textAlignment="center"
+        android:textColor="@color/windowsBackground"
+        android:textSize="36sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/buttonRetourAuMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="183dp"
+        android:layout_height="48dp"
         android:layout_alignBaseline="@+id/buttonRecommencer"
         android:layout_alignBottom="@+id/buttonRecommencer"
-        android:layout_marginStart="51dp"
+        android:layout_marginBottom="46dp"
+        android:layout_marginEnd="26dp"
         android:layout_toEndOf="@+id/buttonRecommencer"
         android:background="#2D7396"
         android:text="Retour au menu"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayoutActivityResultat"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/buttonRetourAuMenu"
-        android:layout_centerHorizontal="true"
-        android:background="@android:color/background_dark"
-        tools:layout_editor_absoluteY="66dp"
-        tools:layout_editor_absoluteX="0dp">
+    <Button
+        android:id="@+id/buttonRecommencer"
+        android:layout_width="152dp"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="46dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginStart="44dp"
+        android:background="#2D7396"
+        android:text="Recommencer"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
-        <TextView
-            android:id="@+id/textViewScoreActivityResultat"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:background="@android:color/holo_orange_light"
-            android:textColor="@android:color/background_dark"
-            android:textSize="18sp"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="0dp"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" />
+    <TextView
+        android:id="@+id/textViewTitreResultat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RESULTATS"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30sp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutActivityResultat"
-            android:layout_width="0dp"
-            android:layout_height="726dp"
-            android:orientation="horizontal"
-            android:weightSum="1"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            app:layout_constraintRight_toRightOf="@+id/textViewScoreActivityResultat"
-            app:layout_constraintTop_toBottomOf="@+id/textViewScoreActivityResultat"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent">
-
-            <ListView
-                android:id="@+id/listViewActivityResultat"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/windowsBackground" />
-        </LinearLayout>
-    </android.support.constraint.ConstraintLayout>
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
