--- a/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/quizz_image_fragment.xml
@@ -124,10 +124,10 @@
                 android:max="10" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textViewTimer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.85" />
+                android:layout_weight="0.85"/>
 
         </LinearLayout>
 
