--- a/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
+++ b/App/DrapeauApp/app/src/main/res/layout/activity_main.xml
@@ -28,15 +28,15 @@
         android:id="@+id/imageViewTouch"
         android:layout_width="203dp"
         android:layout_height="233dp"
-        android:layout_marginBottom="172dp"
+        android:layout_marginBottom="202dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.638"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/touch"
+        app:srcCompat="@drawable/touch2"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintHorizontal_bias="0.501" />
+        tools:layout_constraintRight_creator="1" />
 
     <ProgressBar
         android:id="@+id/progressBarMain"
